# ckb

./: .gitignore
script/: Cargo.toml
script/src/: verify.rs
script/src/syscalls/: mod.rs  zk42.rs
