[package]
name = "ckb-script"
version = "0.31.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
build = "build.rs"

[features]
default = ["logging", "asm"]

asm = ["ckb-vm/asm"]
detect-asm = ["ckb-vm/detect-asm"]
logging = ["ckb-logger"]

[dependencies]
ckb-script-data-loader = { path = "data-loader" }
byteorder = "1.3.1"
ckb-types = {path = "../util/types"}
ckb-hash = {path = "../util/hash"}
ckb-vm = { version = "0.19.1", default-features = false }
faster-hex = "0.4"
ckb-logger = { path = "../util/logger", optional = true }
serde = { version = "1.0", features = ["derive"] }
ckb-error = { path = "../error" }
failure = "0.1.5"
ckb-chain-spec = { path = "../spec" }
goblin = "0.1.3"
ckb-vm-definitions = "0.19.1"
serde_json = "1.0"
hex = "0.4"
argparse = "0.2"
bellman = "0.6.0"
pairing = "0.16.0"
rand = "0.7.3"
sha2 = "0.8.1"

[dev-dependencies]
proptest = "0.9"
ckb-db = { path = "../db" }
ckb-store = { path = "../store" }
ckb-test-chain-utils = { path = "../util/test-chain-utils" }
tiny-keccak = "1.4"
ckb-crypto = { path = "../util/crypto"}
